--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,8 +4,7 @@ project:
 website:
   page-navigation: true
   title: "From R Markdown to Quarto"
-  description: "ASA Traveling Course 2023 - From R Markdown to Quarto"
-  site-url: "http://quarto.org/"
+  description: "ASA Traveling Course 2023 - Nebraska Chapter - From R Markdown to Quarto"
 
   repo-url: https://github.com/mine-cetinkaya-rundel/quarto-asa-nebraska
   repo-actions: [edit, issue]
