--- a/_quarto.yml
+++ b/_quarto.yml
@@ -58,7 +58,7 @@ format:
     theme:
       light: [cosmo, style/sta313.scss]
       dark: [cosmo, style/sta313.scss, style/dark.scss]
-    linkcolor: "#58779b" # Glossy Grape
+    linkcolor: "#58779b"
     toc: true
     code-copy: true
     code-overflow: wrap
